--- a/Bakerstreet/ClientApp/src/components/NavMenu.css
+++ b/Bakerstreet/ClientApp/src/components/NavMenu.css
@@ -24,6 +24,7 @@
     }
     .navbar-header {
         float: none;
+		color: white;
     }
     .navbar .navbar-collapse {
         border-top: 1px solid #444;
